--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 		<!-- Header -->
 			<div id="header">
 				<span class="logo icon fa-paper-plane"></span>
-				<h1>Hi. This is Directive.</h1>
-				<p>A responsive HTML5 + CSS3 site template designed by <a href="http://html5up.net">HTML5 UP</a>
+				<h1>STORAGE S/P BMS-MPPT</h1>
+				<p>A 120 VDC 600 amp-hour(72kWh) lithium ion storage with
 				<br />
-				and released for free under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
+				series/parallel battery management system(BMS) with 
+				<br /> maximum power point tracking(MPPT) and load matching(LM).</p>
 			</div>
 
 		<!-- Main -->
