--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
 			<div id="header">
 				<span class="logo icon fa-paper-plane"></span>
 				<h1>STORAGE S/P BMS-MPPT</h1>
-				<p>A 120 VDC 600 amp-hour(72kWh) lithium ion storage with
-				<br />
-				series/parallel battery management system(BMS) with 
-				<br /> maximum power point tracking(MPPT) and load matching(LM).</p>
+				<p>A series/parallel approach to design of lithium based battery packs.</p>
 			</div>
 
 		<!-- Main -->
