--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 				<div class="box alt container">
 					<section class="feature left">
-						<a href="#" class="image icon solid fa-signal"><img src="images/STORAGE SP BMS-MPPT CONCEPT.jpg" alt="" /></a>
+						<a href="#" class="image icon solid fa-signal"><img src="images/storage1.jpg" alt="" /></a>
 						<div class="content">
 							<h3>The First Thing</h3>
 							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
