--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Storage series/parallel battery management system(BMS) with <br />
-							maximum power point tracking(MPPT).</h2>
+							<h2>Storage series/parallel battery management system(BMS) with maximum power point tracking(MPPT).</h2>
 						</header>
 						<p>The Storage S/P BMS-MPPT is a 120 volts 600 amp-hour 18650 lithium-ion power pack with a novel series/parallel battery management system(BMS) with maximum power point tracking(MPPT) and load matching(LM). The series/parallel BMS-MPPT-LM design is inspired by how the wiring design of advanced field programmable logic array(FPGA) chip-set and hardware design systems such as LED arrays and seven segments is approached. The standard way of making the 18650 battery pack is basically focused on protecting the series connection with BMS, hence you going to get a 3s for 12 volts batteries and 7s for 24 volts. As it can be seen from the previous sentence , a series connection is a voltage multiply and hence parrallel is a current multiply. For instance, a 100 Ah battery will be a 15p. Going further, a 12 volt 100 Ah will have a 3s by 15p BMS. A 3s by 15p BMS will have a grid array wiring diagram when compared to a 3s BMS. Each element in the connection grid represent a single cell connection that is meant to draw power, charge the battery and monitor with analog digital converter. This type of wiring design ensures an optimize current performance when compared to 3s and 7s BMS that exists on the market.</p>
 						
