--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						
 						<h2>Storage s/p bms-mppt concept</h2>
 						
-						<a href="images/fulls/sp01.jpg" class="image fit thumb"><img src="images/fulls/sp01.jpg" alt="" /></a>
+						<a href="#" class="image fit thumb"><img src="images/fulls/sp01.jpg" alt="" /></a>
 						<p><strong>Figure 1.</strong> Storage s/p battery management system with maximum power point tracking concept diagram</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
@@ -53,32 +53,32 @@
 						<h2>Prototype wire harnesses with gel batteries</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<a href="#" class="image fit thumb"><img src="images/fulls/sp02.jpg" alt="" /></a>
 								<h3>Magna sed consequat tempus</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
+								<a href="#" class="image fit thumb"><img src="images/fulls/sp03.jpg" alt="" /></a>
 								<h3>Ultricies lacinia interdum</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
+								<a href="#" class="image fit thumb"><img src="images/fulls/sp04.jpg" alt="" /></a>
 								<h3>Tortor metus commodo</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
+								<a href="#" class="image fit thumb"><img src="images/fulls/sp05.jpg" alt="" /></a>
 								<h3>Quam neque phasellus</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
+								<a href="#" class="image fit thumb"><img src="images/fulls/sp06.jpg" alt="" /></a>
 								<h3>Nunc enim commodo aliquet</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
+								<a href="#" class="image fit thumb"><img src="images/fulls/sp07.jpg" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
