--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
 						<p><strong>Fig. 1.</strong> Storage s/p battery management system with maximum power point tracking Matlab simulation model</p>
 						<p> Figure 2 below shows a use case when the parallel current path cell is compromised either due to excessive heat or short circuit. The cell in question is marked in red, the transistor marked green responds by switching off the cell without compromising the battery voltage, on the other hand the battery current will be affected slightly.</p>
 						<a href="#" class="image fit thumb"><img src="images/fulls/cn02.jpg" alt="" /></a>
-						<p><strong>Fig. 2.</strong> Storage s/p battery management system with maximum power point parallel current path protection use case</p>					
+						<p><strong>Fig. 2.</strong> Storage s/p battery management system with maximum power point parallel current path protection use case</p>	
+						<a href="#" class="image fit thumb"><img src="images/fulls/cn03.jpg" alt="" /></a>
+						<p><strong>Fig. 3.</strong> Gaining control of each Li+ cell</p>
 					</section>
 
 				<!-- Two -->
