--- a/index.html
+++ b/index.html
@@ -63,33 +63,33 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="#" class="image fit thumb"><img src="images/fulls/sp02.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Single Battery Cable Harness</h3>
+								<p>Our young engineer Lelona Nyangwe who is assisting with the project is helping with 6mm cable planning including copper busbar installation.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="#" class="image fit thumb"><img src="images/fulls/sp03.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Switching the Batteries and Solar Charger </h3>
+								<p>After Lelona completed cable harness, I planned the installation of the switching controller that is also acting as a solar charger.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="#" class="image fit thumb"><img src="images/fulls/sp04.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Rain Protection and Gel Battery Installation</h3>
+								<p>We built a brick protection housing using local village builders, Lelona supervised so ensure that the dimensions were correct.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="#" class="image fit thumb"><img src="images/fulls/sp05.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Modified off the shelf Solar controller</h3>
+								<p>Modified off the shelf controller to used our veroboard  built circuit.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="#" class="image fit thumb"><img src="images/fulls/sp06.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Logged Current and Voltage Performance</h3>
+								<p>Using a logger we bought for 3000 dollars we logged the 3 battery case in Fig 3, to determine whether the results from model in Fig 3 matches the experimental results. Similar to the model the voltage, current and state of charge for each battery..</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="#" class="image fit thumb"><img src="images/fulls/sp07.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Complete 3 battery experiment</h3>
+								<p>Complete 3 battery experiment connected and working as modeled in Matlab Simulink.</p>
 							</article>
 						</div>
 
@@ -99,7 +99,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
+						<p>For anyone interested in the project I am working with a group of friends please contact us from below.</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
