--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						</ul>
 						<p> These logic unit blocks create the core functionality of the storage s/p bms-mppt device. Overheat, over current, short circuit protection and charge balancing are the usual function of the battery management system(bms). BMS available in the market have three transistor switches connected across series connected cells. The design in Figure 1 has both three transistors connected in the series current path, and another three transistors on the parallel current paths.</p>
 						<a href="#" class="image fit thumb"><img src="images/fulls/cn01.jpg" alt="" /></a>
-						<p><strong>Fig. 1.</strong> Storage s/p battery management system with maximum power point tracking Matlab simulation model</p>
+						<p><strong>Fig. 1.</strong> Storage s/p battery management system with maximum model that investigate the switch drive for 3 series battery pack </p>
 						<p> Figure 2 below shows a use case when the parallel current path cell is compromised either due to excessive heat or short circuit. The cell in question is marked in red, the transistor marked green responds by switching off the cell without compromising the battery voltage, on the other hand the battery current will be affected slightly.</p>
 						<a href="#" class="image fit thumb"><img src="images/fulls/cn02.jpg" alt="" /></a>
 						<p><strong>Fig. 2.</strong> Storage s/p battery management system with maximum power point parallel current path protection use case</p>	
