Added the prototype

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 						<p><strong>Fig. 2.</strong> Storage s/p battery management system with maximum power point parallel current path protection use case</p>	
 						<a href="#" class="image fit thumb"><img src="images/fulls/cn03.jpg" alt="" /></a>
 						<p><strong>Fig. 3.</strong> Gaining control of each Li+ cell</p>
+						<a href="#" class="image fit thumb"><img src="images/fulls/cn05.jpg" alt="" /></a>
+						<p><strong>Fig. 4.</strong> 3s 4p fabricated prototype energy storage pack</>
 					</section>
 
 				<!-- Two -->
